sell——pager界面，优化部分逻辑

--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -5,29 +5,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_app"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
+    android:background="#EEEEEE"
     tools:context=".app_MainActivity">
-    <FrameLayout
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/main_vp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/navView"
+        android:background="#EEEEEE"
+        app:layout_constraintBottom_toTopOf="@+id/navView"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_weight="1">
-
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/main_vp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#EEEEEE" />
-
-    </FrameLayout>
+        app:layout_constraintVertical_weight="1" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
         app:itemBackground="@android:color/transparent"
+        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/menu_bottom_navi" />
