--- a/app/src/main/res/layout/fragment_shopping_car.xml
+++ b/app/src/main/res/layout/fragment_shopping_car.xml
@@ -1,19 +1,23 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-
-    <com.github.jdsjlzx.recyclerview.LRecyclerView
-        android:id="@+id/LrecyclerView_shoppingCar"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout_shopping_car"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="30dp" />
+        android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/empty_view"
-        layout="@layout/layout_empty"
-        android:visibility="gone" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/LrecyclerView_shoppingCar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="30dp" />
+
+
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floating_button"
         android:layout_width="62dp"
