--- a/app_mine/src/main/res/values/themes.xml
+++ b/app_mine/src/main/res/values/themes.xml
@@ -43,9 +43,8 @@
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <!-- Navigation bar color. 导航栏-->
-        <item name="android:windowTranslucentNavigation">true</item>
+<!--        <item name="android:windowTranslucentNavigation">true</item>-->
         <item name="android:navigationBarColor">@android:color/transparent</item>
-        <item name="actionSheetStyle">@style/ActionSheetStyleiOS7</item>
 
         <!--        <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>-->
     </style>
