--- a/app_sell_pager/src/main/res/layout/activity_search_goods.xml
+++ b/app_sell_pager/src/main/res/layout/activity_search_goods.xml
@@ -3,35 +3,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:id="@+id/constraint_layout_search"
+    android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search_searchView"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:imeOptions="actionGo"
-        app:iconifiedByDefault="false"
-        app:layout_constraintTop_toTopOf="parent"
-        app:queryHint="搜索" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/search_recyclerView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintTop_toBottomOf="@id/search_searchView"
-        tools:layout_editor_absoluteX="16dp" />
+        android:fitsSystemWindows="true">
 
-    <TextView
-        android:id="@+id/search_textView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="网络走丢了..."
-        android:textColor="#808080"
-        android:textSize="20dp"
-        android:visibility="gone" />
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_searchView"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:imeOptions="actionGo"
+            app:iconifiedByDefault="false"
+            app:layout_constraintTop_toTopOf="parent"
+            app:queryHint="搜索" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="16dp"
+            app:layout_constraintTop_toBottomOf="@id/search_searchView"
+            app:layout_goneMarginTop="30dp"
+            tools:layout_editor_absoluteX="16dp" />
+
+        <TextView
+            android:id="@+id/search_textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="网络走丢了..."
+            android:textColor="#808080"
+            android:textSize="20dp"
+            android:visibility="gone" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
